refactor: ♻️ 重构代码以使用新版Java语法特性
将项目中的多个类重构以利用Java 14+的新语法特性，主要包括：
1. 使用text blocks替代多行字符串拼接
2. 使用switch表达式替换传统的switch-case结构
3. 使用模式匹配instanceof简化类型检查和转换
4. 使用List的新方法如getFirst()和removeFirst()

这些改进使代码更加简洁、可读性更强，同时减少了样板代码量。